[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newshub"
version = "0.1.0"
description = "新闻热点聚合推送系统"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
newshub = "main:main"

[tool.setuptools.packages.find]
include = ["newshub*"]
